--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,9 +31,11 @@ twitter_username: [None]
 github_username:  js2432
 
 # Build settings
-theme: minima
+# theme: minima
+remote_theme: "mmistakes/minimal-mistakes@4.24.0"
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
